bases/apps/shoppinglist/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppinglist
spec:
  selector:
    matchLabels:
      app: shoppinglist
  template:
    metadata:
      labels:
        app: shoppinglist
    spec:
      containers:
        - name: shoppinglist
          image: ghcr.io/kmjayadeep/shoppinglist-server:1723658987 # {"$imagepolicy": "shoppinglist:shoppinglist"}
          resources:
            requests:
              memory: "50Mi"
              cpu: "25m"
            limits:
              memory: "100Mi"
              cpu: "250m"
