bases/apps/shoppinglist/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shoppinglist-ingress
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - shoppinglist.local
    secretName: shoppinglist-cert
  rules:
  - host: shoppinglist.local
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: shoppinglist
            port:
              number: 8080
      - path: /swagger
        pathType: ImplementationSpecific
        backend:
          service:
            name: shoppinglist
            port:
              number: 8080
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: shoppinglist-ui
            port:
              number: 8080
